--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,15 @@ ul {
   padding: 0;
 }
 .menu-fogyasztas {
+  min-height: 250px;
+  width: auto;
+  border-radius: 10px;
+  padding: 15px;
   text-align: left;
+
+  background-color: rgba(240, 248, 255, 0.568);
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.459) inset,
+    -2px -2px 3px rgba(0, 0, 0, 0.486) inset;
 }
 li {
   margin-top: 10px;
@@ -132,7 +140,6 @@ button:hover {
 }
 
 input {
-  max-width: 50%;
   border: none;
   outline: none;
   border-radius: 5px;
@@ -154,11 +161,7 @@ input:focus {
   overflow-y: auto;
   z-index: 5;
 }
-.h-5 {
-  color: red;
-  height: 30px;
-  width: 30px;
-}
+
 .selected-food {
   cursor: pointer;
   transition-duration: 0.2s;
@@ -169,6 +172,9 @@ input:focus {
 .selected-food:hover {
   transform: scale(0.95);
   color: rgb(78, 9, 9);
+}
+.form-buttons > button {
+  margin-left: 15px;
 }
 @media screen and (max-width: 1000px) {
   h5 {
@@ -185,11 +191,24 @@ input:focus {
     margin-left: 5px;
   }
   button {
-    transform: scale(0.5);
+    padding: 5px 10px;
+    width: 50%;
+    font-size: 18px;
   }
-  button:hover {
-    transform: scale(0.4);
+  .menu-buttons > button:nth-of-type(2) {
+    border-radius: 0;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
   }
+  .menu-buttons > button:nth-of-type(1) {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+  .menu-buttons > button:nth-of-type(3) {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+
   .App {
     width: 90%;
   }
@@ -198,6 +217,7 @@ input:focus {
     margin-bottom: 10px;
   }
   .menu-buttons {
+    margin: 10px auto;
     width: 90%;
     display: flex;
     flex-direction: row;
@@ -207,13 +227,29 @@ input:focus {
   }
   .menu-list {
     width: 90%;
-    height: auto;
+    min-height: 60px;
   }
   form {
     flex-direction: column;
     margin-bottom: 10px;
   }
   .menu-fogyasztas {
+    width: 90%;
     margin-bottom: 10px;
+  }
+  .form-buttons {
+    margin: 10px auto;
+  }
+  .form-buttons > button {
+    margin: 0;
+  }
+  .form-buttons > button:nth-of-type(1) {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-right: 1px solid black;
+  }
+  .form-buttons > button:nth-of-type(2) {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
   }
 }
