--- a/src/index.css
+++ b/src/index.css
@@ -144,6 +144,7 @@ button:hover {
 }
 
 input {
+  width: 25%;
   border: none;
   outline: none;
   border-radius: 5px;
@@ -218,6 +219,12 @@ button.del {
     width: 50%;
     font-size: 18px;
   }
+  input {
+    width: 100%;
+  }
+  input:nth-of-type(1) {
+    margin-bottom: 5px;
+  }
   .menu-buttons > button {
     width: 100%;
   }
@@ -253,9 +260,11 @@ button.del {
   }
   .form-buttons {
     margin: 10px auto;
+    width: 100%;
   }
   .form-buttons > button {
     margin: 0;
+    width: 50%;
   }
   .form-buttons > button:nth-of-type(1) {
     border-top-right-radius: 0;
